correct front matter

--- a/_notebooks/2021-05-20-mixup.ipynb
+++ b/_notebooks/2021-05-20-mixup.ipynb
@@ -24,7 +24,7 @@
         "id": "ihrDZHV_g3fF"
       },
       "source": [
-        "# MixUp: Beyond Empirical Risk Minimization \n",
+        "# MixUp Beyond Empirical Risk Minimization \n",
         "> With TF implementation\n",
         "- toc: true\n",
         "- branch: master\n",
